fix issue where events could be submitted with earlier end_times than start_times; clean up events.view event_detail icon spacing

--- a/resources/sass/event.sass
+++ b/resources/sass/event.sass
@@ -25,6 +25,7 @@
       width: 32px
       height: 32px
       color: $text-light
+      margin-right: 10px
     .detail_content
       font-size: $size-medium
       text-align: left
